--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,5 +1,5 @@
-fastapi >= 0.95.0
-uvicorn[standard] >= 0.21.0
+fastapi == 0.70.1
+uvicorn[standard]==0.16.0
 python-dotenv >= 1.0.0
 discord >= 2.2.2
 requests >= 2.28.0
